static/docs/1.3.0/api/python/_sources/generated/gravitino.api.authorization.privileges.Privileges.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.

gravitino.api.authorization.privileges.Privileges
=================================================

.. currentmodule:: gravitino.api.authorization.privileges

.. autoclass:: Privileges
   :members:                                    
   :show-inheritance:                           
   :inherited-members:                          

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Privileges.__init__
      ~Privileges.allow
      ~Privileges.deny
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Privileges.FILESET_SUPPORTED_TYPES
      ~Privileges.FUNCTION_SUPPORTED_TYPES
      ~Privileges.MANAGE_GRANTS_SUPPORTED_TYPES
      ~Privileges.MODEL_SUPPORTED_TYPES
      ~Privileges.SCHEMA_SUPPORTED_TYPES
      ~Privileges.TABLE_SUPPORTED_TYPES
      ~Privileges.TOPIC_SUPPORTED_TYPES
      ~Privileges.VIEW_SUPPORTED_TYPES
   
   